# CG-ZBuffer-Algorithm

./: CMakeLists.txt  README.md  run.sh
assets/: chaos.txt  so_many.txt
source/: BufferUtil.cpp  BufferUtil.h  PolygonUtil.cpp  PolygonUtil.h  RasterisationUtil.cpp  RasterisationUtil.h  SceneUtil.cpp  SceneUtil.h  main.cpp
